EKS/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: techscrum
  namespace: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: techscrum
  replicas: 2
  strategy:
   type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: techscrum
    spec:
      containers:
      - name: techscrum-backend
        image: 271584491311.dkr.ecr.ap-southeast-2.amazonaws.com/techscrum:${COMMIT_HASH}
        ports:
        - containerPort: 8000
          protocol: TCP
        imagePullPolicy: Always
        resources:
            limits:
              cpu: 500m
              memory: "256Mi"
            requests:
              cpu: 250m
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: techscrum
  namespace: backend
  # labels:
  #   app.kubernetes.io/name: techscrum
spec:
  selector:
    app.kubernetes.io/name: techscrum
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
